--- a/templates/base.html
+++ b/templates/base.html
@@ -283,6 +283,7 @@
 
     <!-- Show toasts  -->
     <script>
+        /* global $ */
         $(document).ready(function () {
             $('.toast').toast('show');
         });
@@ -292,6 +293,7 @@
     <script src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js">
     </script>
     <script>
+        /* global $, fnames, ftypes, jQuery */
         (function ($) {
             window.fnames = new Array();
             window.ftypes = new Array();
