--- a/products/templates/edit_product.html
+++ b/products/templates/edit_product.html
@@ -39,6 +39,7 @@
 {% block postloadjs %}
     {{ block.super }}
     <script>
+        /* global $ */
         $('#id_image').change(function() {
             var file = $('#id_image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
