--- a/profiles/templates/profile.html
+++ b/profiles/templates/profile.html
@@ -214,6 +214,8 @@
         openFailedCollapse('account-password');
     {% endif %}
 </script>
+
+<!-- bootstrap tooltip script -->
 <script>
     var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
     var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
