--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -174,7 +174,7 @@
 </div>
 <!-- Overlay to hide screen upon form submit -->
 <div id="loading-overlay">
-    <div class="text-white loading-spinner">
+    <div class="text-white loading-spinner fs-1">
         <i class="fas fa-3x fa-spinner fa-spin"></i>
     </div>
 </div>
