Improve accessibility based on wave tests

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,7 +9,7 @@
     --blue: #075997;
     --yellow: #fec901;
     --gray-light:#ebebeb;
-    --red: #ed2415;
+    --red: #EB0000;
 }
 
 /********************* Utility Classes *******************/
