--- a/templates/includes/top_nav_mobile.html
+++ b/templates/includes/top_nav_mobile.html
@@ -70,7 +70,7 @@
                     <div class="input-group-append">
                         <button
                             class="form-control btn-yellow border-black rounded-0 search-button search-button-mobile"
-                            type="submit">
+                            type="submit" aria-label="Search">
                             <span class="icon">
                                 <i class="fas fa-magnifying-glass"></i>
                             </span>
