--- a/templates/base.html
+++ b/templates/base.html
@@ -68,10 +68,12 @@
             <div class=" col-12 col-lg-4 text-center my-auto">
                 <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
+                        <label for="search-bar" class="d-none">Search bar:</label>
                         <input class="form-control rounded-0 search-input" type="text" name="q"
-                            placeholder="Search our products">
+                            placeholder="Search our products" id="search-bar">
                         <div class="input-group-append">
-                            <button class="form-control btn-yellow border-yellow rounded-0 search-button" type="submit">
+                            <label for="search-btn" class="d-none">Search button:</label>
+                            <button class="form-control btn-yellow border-yellow rounded-0 search-button" type="submit" aria-label="Search" id="search-btn">
                                 <span class="icon">
                                     <i class="fas fa-magnifying-glass"></i>
                                 </span>
@@ -79,7 +81,6 @@
                         </div>
                     </div>
                 </form>
-
             </div>
             <!-- Account section -->
             <div class="col-12 col-lg-4 my-auto">
@@ -230,6 +231,7 @@
                                 target="_blank">
                                 <div id="mc_embed_signup_scroll">
                                     <p class="text-center mt-0">Keep up to date with all our latest product releases and deals!</p>
+                                    <label for="mce-EMAIL" class="d-none">Email Address:</label>
                                     <div class="mc-field-group w-75 mx-auto">
                                         <input type="email" name="EMAIL" class="required email"
                                             id="mce-EMAIL" required="" value="" placeholder="Enter Email Address">
