--- a/templates/base.html
+++ b/templates/base.html
@@ -243,7 +243,8 @@
                                     <div aria-hidden="true" style="position: absolute; left: -5000px;">
                                         /* real people should not fill this in and expect good things - do not remove this or risk form bot
                                         signups */
-                                        <input type="text" name="b_e162ff834ad07ab095bb85581_f908fecc84" tabindex="-1" value="">
+                                        <label for="mailchimp-hidden" class="d-none">Hidden mailchimp input</label>
+                                        <input type="text" name="b_e162ff834ad07ab095bb85581_f908fecc84" tabindex="-1" value="" id="mailchimp-hidden">
                                     </div>
                                     <div class="optionalParent">
                                         <div class="clear foot d-flex justify-content-center w-100">
