--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -112,7 +112,7 @@
                 <p class="mb-1 product_tag">
                     <a href="{% url 'products' %}?category={{product.category.name}}" class="feedback">
                         <i class="fa-solid fa-tag me-2 text-blue"></i>
-                        <span class="text-gray">
+                        <span>
                             {{ product.category.display_name }}
                         </span>
                     </a>
@@ -123,7 +123,7 @@
                 <p class="mb-1">
                     <a href=" {% url 'products' %}?card_set={{product.card_set.name}}" class="feedback">
                         <i class="fa-solid fa-layer-group me-2 text-blue"></i>
-                        <span class="text-gray">
+                        <span>
                             {{product.card_set.display_name }}
                         </span>
                     </a>
@@ -135,7 +135,7 @@
                 <p>
                     <a href=" {% url 'products' %}?expansion={{product.expansion.name}}" class="feedback">
                         <i class="fa-solid fa-dragon me-2 text-blue">
-                        </i><span class="text-gray">
+                        </i><span>
                             {{product.expansion.display_name}}
                         </span>
                     </a>
@@ -149,12 +149,13 @@
                             <p class="mt-3"><strong class="me-2">Quantity</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
+                                    <label for="qty-input" class="d-none">Update quantity</label>
                                     <input class="form-control" type="number" name="quantity" value="1" min="1"
-                                        max="99">
+                                        max="99"  id="qty-input">
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">  
                             <input type="submit" class="btn btn-warning w-75 mt-3 shadow" value="Add to basket">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
