Update headings to conform with best practices

--- a/templates/includes/confirm_delete_modal.html
+++ b/templates/includes/confirm_delete_modal.html
@@ -1,10 +1,10 @@
 <!-- Delete product confirmation Modal -->
-<div class="modal fade" id="{{ prefix }}-confirmDeleteModal-{{ product.id}}" tabindex="-1" aria-labelledby="{{ prefix }}-confirmDeleteModalLabel-{{ product.id }}"
-  aria-hidden="true">
+<div class="modal fade" id="{{ prefix }}-confirmDeleteModal-{{ product.id}}" tabindex="-1"
+  aria-labelledby="{{ prefix }}-confirmDeleteModalLabel-{{ product.id }}" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="{{ prefix }}-confirmDeleteModalLabel-{{ product.id}}">Delete Product?</h5>
+        <h3 class="modal-title" id="{{ prefix }}-confirmDeleteModalLabel-{{ product.id}}">Delete Product?</h3>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
