--- a/templates/includes/product_card.html
+++ b/templates/includes/product_card.html
@@ -4,9 +4,9 @@
         <div class="feedback">
             <!-- Sale badge -->
             {% if product.on_sale %}
-                <div class="badge bg-red position-absolute fs-6" style="top: 1.5rem; right: 0.5rem">
-                    On Sale
-                </div>
+            <div class="badge bg-red position-absolute fs-6" style="top: 1.5rem; right: 0.5rem">
+                On Sale
+            </div>
             {% endif %}
             <!-- Image -->
             {% if product.image %}
@@ -33,7 +33,7 @@
                     <p class="mb-3 fs-3 text-center text-blue">
                         <strong>
                             {% if product.on_sale %}
-                                <del class="text-red fs-6">{{product.pre_sale_price}}</del>
+                            <del class="text-red fs-6">{{product.pre_sale_price}}</del>
                             {% endif %}
                             €{{ product.price }}
                         </strong>
@@ -41,8 +41,7 @@
                     <!-- add links for category, card set and expansion -->
                     {% if product.category %}
                     <p class="mb-1 product_tag">
-                        <a href="{% url 'products' %}?category={{product.category.name}}"
-                            class="feedback">
+                        <a href="{% url 'products' %}?category={{product.category.name}}" class="feedback">
                             <i class="fa-solid fa-tag me-2 text-blue"></i>
                             <span>
                                 {{ product.category.display_name }}
@@ -53,8 +52,7 @@
 
                     {% if product.card_set %}
                     <p class="mb-1">
-                        <a href=" {% url 'products' %}?card_set={{product.card_set.name}}"
-                            class="feedback">
+                        <a href=" {% url 'products' %}?card_set={{product.card_set.name}}" class="feedback">
                             <i class="fa-solid fa-layer-group me-2 text-blue"></i>
                             <span>
                                 {{product.card_set.display_name }}
@@ -65,8 +63,7 @@
 
                     {% if product.expansion %}
                     <p>
-                        <a href=" {% url 'products' %}?expansion={{product.expansion.name}}"
-                            class="feedback">
+                        <a href=" {% url 'products' %}?expansion={{product.expansion.name}}" class="feedback">
                             <i class="fa-solid fa-dragon me-2 text-blue">
                             </i><span>
                                 {{product.expansion.display_name}}
@@ -92,8 +89,10 @@
                             {% csrf_token %}
                             <div class="form-row">
                                 <div class="col-12 d-flex justify-content-center">
-                                    <label for="add-to-basket-{{ product.id }}" class="d-none">Add to basket</label>
-                                    <input type="submit" class="btn btn-warning w-75 my-3 shadow add-btn" value="Add to basket" id="add-to-basket-{{ product.id }}">
+                                    <label for="{{ prefix }}-add-to-basket-{{ product.id }}" class="d-none">Add to
+                                        basket</label>
+                                    <input type="submit" class="btn btn-warning w-75 my-3 shadow add-btn"
+                                        value="Add to basket" id="{{ prefix }}-add-to-basket-{{ product.id }}">
                                 </div>
                                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
                                 <input class="form-control" type="hidden" name="quantity" value="1">
@@ -102,10 +101,11 @@
 
                         <!-- Admin edit delete btns -->
                         {% if request.user.is_superuser %}
-                            <div class="text-center mt-2">
-                                <a class="btn btn-primary" href="{% url 'edit_product' product.id %}">Edit</a>
-                                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#{{ prefix }}-confirmDeleteModal-{{ product.id }}">Delete</button>
-                            </div>     
+                        <div class="text-center mt-2">
+                            <a class="btn btn-primary" href="{% url 'edit_product' product.id %}">Edit</a>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#{{ prefix }}-confirmDeleteModal-{{ product.id }}">Delete</button>
+                        </div>
                         {% endif%}
                     </div>
                 </div>
