--- a/about_us/templates/about_us.html
+++ b/about_us/templates/about_us.html
@@ -12,9 +12,14 @@
         <div class="row justify-content-center">
             <h2 class="text-center h1">Pokemon TCG's Story</h2>
             <div class="col-12 col-lg-10 col-xl-8">
-                <p><strong>Pokemon TCG Ireland</strong> was founded in 2024, the same year when the owner son became a Pokemon card enthusiast, sharing his father's fondness for the franchise. Having been a fan of Pokemon since his childhood, Gary is an avid collector of Pokemon cards himself. 
+                <p><strong>Pokemon TCG Ireland</strong> was founded in 2024, the same year when the owner son became a
+                    Pokemon card enthusiast, sharing his father's fondness for the franchise. Having been a fan of
+                    Pokemon since his childhood, Gary is an avid collector of Pokemon cards himself.
                 </p>
-                <p>The company was created out of a shared love for Pokemon cards and a desire to provide a <strong>Pokemon card shop in Dublin</strong> for fellow enthusiasts. So whether your looking for a <strong>Pokemon gift</strong>, for a loved one or looking to add to your collection Pokemon TCG Ireland has you covered.   
+                <p>The company was created out of a shared love for Pokemon cards and a desire to provide a
+                    <strong>Pokemon card shop in Dublin</strong> for fellow enthusiasts. So whether your looking for a
+                    <strong>Pokemon gift</strong>, for a loved one or looking to add to your collection Pokemon TCG
+                    Ireland has you covered.
                 </p>
             </div>
         </div>
@@ -27,14 +32,17 @@
     <!-- Meet the Owners-->
     <section class="my-4">
         <h2 class="text-center mt-2">Meet the owners</h2>
-        <div class="row d-flex justify-content-center">          
+        <div class="row d-flex justify-content-center">
             <div class="col-12 text-center mb-2">
                 <img src="https://pokemon-tcg-ireland-bucket.s3.eu-west-1.amazonaws.com/media/pokemon-tcg-ireland-owners.webp"
                     alt="Picture of Pokemon TCG owners" class="mb-3 border border-secondary rounded img-fluid">
             </div>
             <div class="col-12 col-lg-10 col-xl-8">
                 <p>
-                    The owners of <strong>Pokemon TCG Ireland</strong> are the Dolan family, who are deeply passionate about Pokemon and dedicated to providing a top-notch experience for fellow enthusiasts. With their love for the franchise and commitment to the community, they lead the company in its mission to become a leading destination for <strong>Pokemon cards</strong> and related merchandise.
+                    The owners of <strong>Pokemon TCG Ireland</strong> are the Dolan family, who are deeply passionate
+                    about Pokemon and dedicated to providing a top-notch experience for fellow enthusiasts. With their
+                    love for the franchise and commitment to the community, they lead the company in its mission to
+                    become a leading destination for <strong>Pokemon cards</strong> and related merchandise.
                 </p>
             </div>
         </div>
@@ -50,14 +58,22 @@
             <div class="col-12 col-lg-10 col-xl-8">
                 <h2 class="text-center mt-2">Our Goals</h2>
                 <p>
-                    At <strong>Pokemon TCG Ireland</strong>, our goal is to offer the best value for money and make Pokemon cards accessible to all enthusiasts. We strive to provide cards at extremely competitive prices, ensuring that collectors can add to their collections without breaking the bank. 
+                    At <strong>Pokemon TCG Ireland</strong>, our goal is to offer the best value for money and make
+                    Pokemon cards accessible to all enthusiasts. We strive to provide cards at extremely competitive
+                    prices, ensuring that collectors can add to their collections without breaking the bank.
                 </p>
-                <p>    
-                    Additionally, we aim to foster a sense of community by promoting not only card collecting but also learning and playing the Pokemon Trading Card Game. We intend to hold events at which Pokemon TCG fans both young and old can learn to play the game and even win some prizes. 
+                <p>
+                    Additionally, we aim to foster a sense of community by promoting not only card collecting but also
+                    learning and playing the Pokemon Trading Card Game. We intend to hold events at which Pokemon TCG
+                    fans both young and old can learn to play the game and even win some prizes.
                 </p>
-                <p>    
-                    We plan to continually expand our product range and currently offer <strong>Pokemon card packs, ETB's, Boxed sets, Booster boxes, Pokemon Plushes, Pokemon pins, Pokemon figures</strong> and not forgetting the essentials for protecting your collection <strong>Pokemon card binders, sleeves and toploaders</strong> from our partners at <a href="https://ultrapro.com" target="_blank"
-                    rel="noopener nofollow" aria-label="Ultra pro website (opens in a new tab)"><strong class="text-blue">Ultra PRO</strong></a>.
+                <p>
+                    We plan to continually expand our product range and currently offer <strong>Pokemon card packs,
+                        ETB's, Boxed sets, Booster boxes, Pokemon Plushes, Pokemon pins, Pokemon figures</strong> and
+                    not forgetting the essentials for protecting your collection <strong>Pokemon card binders, sleeves
+                        and toploaders</strong> from our partners at <a href="https://ultrapro.com" target="_blank"
+                        rel="noopener nofollow" aria-label="Ultra pro website (opens in a new tab)"><strong
+                            class="text-blue">Ultra PRO</strong></a>.
                 </p>
             </div>
         </div>
