--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -22,12 +22,13 @@
         </div>
     </div>
     <div class="row justify-content-center mt-4">
-        <div class="col-11 col-sm-8 col-md-5 col-lg-4 col-xl-4 col-xxl-3  me-md-4 mb-4 d-flex align-items-top position-relative">
+        <div
+            class="col-11 col-sm-8 col-md-5 col-lg-4 col-xl-4 col-xxl-3  me-md-4 mb-4 d-flex align-items-top position-relative">
             <!-- Sale badge -->
             {% if product.on_sale %}
-            <div class="badge bg-red position-absolute fs-6" style="top: 2.5rem; right: 2rem">
-                On Sale
-            </div>
+                <div class="badge bg-red position-absolute fs-6" style="top: 2.5rem; right: 2rem">
+                    On Sale
+                </div>
             {% endif %}
             <!-- Image -->
             <div class="image-container">
@@ -37,10 +38,10 @@
                         src="{{ product.image.url }}" alt="{{ product.name }}">
                 </a>
                 {% elif product.image_url %}
-                <a href="{{ product.image_url }}" data-lightbox="product-image">
-                    <img class="card-img-top img-fluid bg-white shadow rounded-3 border border-1"
-                        src="{{ product.image_url }}" alt="{{ product.name }}">
-                </a>
+                    <a href="{{ product.image_url }}" data-lightbox="product-image">
+                        <img class="card-img-top img-fluid bg-white shadow rounded-3 border border-1"
+                            src="{{ product.image_url }}" alt="{{ product.name }}">
+                    </a>
                 {% else %}
                     <img class="card-img-top img-fluid" src="{% static 'images/no-image-placeholder.webp' %}"
                         alt=" {{ product.name }}">
@@ -64,14 +65,17 @@
                     <!-- Wishlist icon -->
                     <div class="col-6 text-end">
                         {% if request.user.is_authenticated %}
-                            <form class="d-inline wishlist-form" action="{% url 'wishlist_toggle' product.id %}" method="POST">
+                            <form class="d-inline wishlist-form" action="{% url 'wishlist_toggle' product.id %}"
+                                method="POST">
                                 {% csrf_token %}
                                 {% if product_in_wishlist %}
-                                    <button type="submit" class="border-0 bg-white" data-bs-toggle="tooltip" data-bs-placement="Bottom" title="Remove from wishlist">
+                                    <button type="submit" class="border-0 bg-white" data-bs-toggle="tooltip"
+                                        data-bs-placement="Bottom" title="Remove from wishlist">
                                         <i class="fas fa-heart fs-3 text-red"></i>
                                     </button>
                                 {% else %}
-                                    <button type="submit" class="border-0 bg-white" data-bs-toggle="tooltip" data-bs-placement="Bottom" title="Add to wishlist">
+                                    <button type="submit" class="border-0 bg-white" data-bs-toggle="tooltip"
+                                        data-bs-placement="Bottom" title="Add to wishlist">
                                         <i class="far fa-heart fs-3"></i>
                                     </button>
                                 {% endif %}
@@ -86,10 +90,10 @@
                             <a href="#reviews">
                                 <!-- Display the number of stars based on ave rating -->
                                 {% with num_of_stars=product.get_avg_num_of_stars_list %}
-                                    {% for stars in num_of_stars  %}
+                                    {% for stars in num_of_stars %}
                                         <i class="fa-solid fa-star text-yellow"></i>
                                     {% endfor %}
-                                {% endwith %} 
+                                {% endwith %}
                                 <span class="ms-1">{{product.get_avg_rating}}/5</span>
                                 <span>({{product.get_num_reviews}} reviews)</span>
                             </a>
@@ -109,37 +113,36 @@
 
                 <!-- Add links for category, card set and expansion -->
                 {% if product.category %}
-                <p class="mb-1 product_tag">
-                    <a href="{% url 'products' %}?category={{product.category.name}}" class="feedback">
-                        <i class="fa-solid fa-tag me-2 text-blue"></i>
-                        <span>
-                            {{ product.category.display_name }}
-                        </span>
-                    </a>
-                </p>
+                    <p class="mb-1 product_tag">
+                        <a href="{% url 'products' %}?category={{product.category.name}}" class="feedback">
+                            <i class="fa-solid fa-tag me-2 text-blue"></i>
+                            <span>
+                                {{ product.category.display_name }}
+                            </span>
+                        </a>
+                    </p>
                 {% endif %}
 
                 {% if product.card_set %}
-                <p class="mb-1">
-                    <a href=" {% url 'products' %}?card_set={{product.card_set.name}}" class="feedback">
-                        <i class="fa-solid fa-layer-group me-2 text-blue"></i>
-                        <span>
-                            {{product.card_set.display_name }}
-                        </span>
-                    </a>
-                </p>
-
+                    <p class="mb-1">
+                        <a href=" {% url 'products' %}?card_set={{product.card_set.name}}" class="feedback">
+                            <i class="fa-solid fa-layer-group me-2 text-blue"></i>
+                            <span>
+                                {{product.card_set.display_name }}
+                            </span>
+                        </a>
+                    </p>
                 {% endif %}
 
                 {% if product.expansion %}
-                <p>
-                    <a href=" {% url 'products' %}?expansion={{product.expansion.name}}" class="feedback">
-                        <i class="fa-solid fa-dragon me-2 text-blue">
-                        </i><span>
-                            {{product.expansion.display_name}}
-                        </span>
-                    </a>
-                </p>
+                    <p>
+                        <a href=" {% url 'products' %}?expansion={{product.expansion.name}}" class="feedback">
+                            <i class="fa-solid fa-dragon me-2 text-blue">
+                            </i><span>
+                                {{product.expansion.display_name}}
+                            </span>
+                        </a>
+                    </p>
                 {% endif %}
                 <!-- Quantity & add to basket-->
                 <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
@@ -150,12 +153,12 @@
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <label for="qty-input" class="d-none">Update quantity</label>
-                                    <input class="form-control" type="number" name="quantity" value="1" min="1"
-                                        max="99"  id="qty-input">
+                                    <input class="form-control" type="number" name="quantity" value="1" min="1" max="99"
+                                        id="qty-input">
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 d-flex justify-content-center">  
+                        <div class="col-12 d-flex justify-content-center">
                             <input type="submit" class="btn btn-warning w-75 mt-3 shadow" value="Add to basket">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
@@ -170,8 +173,9 @@
                 {% if request.user.is_superuser %}
                     <div class="text-end mb-3">
                         <a class="btn btn-warning" href="{% url 'edit_product' product.id %}">Edit</a>
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#{{ prefix }}-confirmDeleteModal-{{ product.id }}">Delete</button>
-                    </div>     
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                            data-bs-target="#{{ prefix }}-confirmDeleteModal-{{ product.id }}">Delete</button>
+                    </div>
                 {% endif%}
             </div>
         </div>
@@ -195,10 +199,10 @@
                             <div class="btn-group" role="group" aria-label="Rating stars radio buttons">
                                 <input type="radio" class="btn-check" id="star5" name="review_rating" value="5" required>
                                 <label class="btn border-0" for="star5"><i class="fa-solid fa-star"></i></label>
-                            
-                                <input type="radio" class="btn-check" id="star4" name="review_rating" value="4" >
+
+                                <input type="radio" class="btn-check" id="star4" name="review_rating" value="4">
                                 <label class="btn border-0" for="star4"><i class="fa-solid fa-star"></i></label>
-                            
+
                                 <input type="radio" class="btn-check" id="star3" name="review_rating" value="3">
                                 <label class="btn border-0" for="star3"><i class="fa-solid fa-star"></i></label>
 
@@ -216,7 +220,8 @@
                     <p class="mt-3">You have already reviewed this product, Thank you!</p>
                 {% endif %}
             {% else %}
-                <p class="mt-3">Please <a href="{% url 'account_login' %}"><strong>login</strong></a> or <a href="{% url 'account_signup' %}"><strong>signup</strong></a> to leave a review.</p>
+                <p class="mt-3">Please <a href="{% url 'account_login' %}"><strong>login</strong></a> or <a
+                        href="{% url 'account_signup' %}"><strong>signup</strong></a> to leave a review.</p>
             {% endif %}
         </div>
     </div>
@@ -234,7 +239,8 @@
                         <div class="col px-5">
                             <p class="mt-3">
                                 <small><strong>{{ review.user.username }}</strong> - {{ review.created_on }}</small>
-                                <strong class="ms-2">{{ review.review_rating }}/5</strong> <i class="fa-solid fa-star text-yellow"></i>
+                                <strong class="ms-2">{{ review.review_rating }}/5</strong> <i
+                                    class="fa-solid fa-star text-yellow"></i>
                                 {% if user.is_authenticated and review.user == user %}
                                     <a href="{% url 'delete_review' review.id %}" class="btn btn-sm btn-danger ms-1">Delete</a>
                                 {% endif %}
@@ -245,12 +251,12 @@
                     </div>
                 {% endfor %}
             {% else %}
-                    <p class="text-center mt-3">There are no reviews for this product yet</p>
+                <p class="text-center mt-3">There are no reviews for this product yet</p>
             {% endif %}
         </div>
     </div>
 </div>
- {% include 'includes/confirm_delete_modal.html' %}
+{% include 'includes/confirm_delete_modal.html' %}
 
 {% endblock %}
 
@@ -263,7 +269,6 @@
     var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
         return new bootstrap.Tooltip(tooltipTriggerEl)
     })
-
 </script>
 
 {% endblock %}
