--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -18,7 +18,8 @@
                 <div class="col-12 col-md-6 my-auto d-flex justify-content-center justify-content-md-start">
                     <p class="text-muted mt-3 text-center text-md-left">
                         {% if search_term or current_categories or current_sorting != 'None_None' or on_sale == 1 %}
-                        <span class="fs-6"><a href="{% url 'products' %}"><strong class="text-blue feedback">Products Home</strong></a> | </span>
+                            <span class="fs-6"><a href="{% url 'products' %}"><strong class="text-blue feedback">Products
+                                        Home</strong></a> | </span>
                         {% endif %}
                         {{ products|length }} Products
                         {% if search_term %} found for <strong> "{{ search_term }}"</strong>{% endif %}
@@ -27,32 +28,33 @@
                 <!-- Sort selector -->
                 <div class="col-12 col-md-6 my-auto d-flex justify-content-center justify-content-md-end">
                     <div class="select_container w-50">
-                        <select id="sort-selector" class="form-select form-select-sm rounded-2" aria-label="sort selector">
-                            <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>
+                        <select id="sort-selector" class="form-select form-select-sm rounded-2"
+                            aria-label="sort selector">
+                            <option value="reset" {% if current_sorting=='None_None' %}selected{% endif %}>
                                 Sort by...
                             </option>
-                            <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>
+                            <option value="price_asc" {% if current_sorting=='price_asc' %}selected{% endif %}>
                                 Price (low to high)
                             </option>
-                            <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>
+                            <option value="price_desc" {% if current_sorting=='price_desc' %}selected{% endif %}>
                                 Price (high to low)
                             </option>
-                            <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>
+                            <option value="rating_asc" {% if current_sorting=='rating_asc' %}selected{% endif %}>
                                 Rating (low to high)
                             </option>
-                            <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>
+                            <option value="rating_desc" {% if current_sorting=='rating_desc' %}selected{% endif %}>
                                 Rating (high to low)
                             </option>
-                            <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>
+                            <option value="name_asc" {% if current_sorting=='name_asc' %}selected{% endif %}>
                                 Name (A-Z)
                             </option>
-                            <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>
+                            <option value="name_desc" {% if current_sorting=='name_desc' %}selected{% endif %}>
                                 Name (Z-A)
                             </option>
-                            <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
+                            <option value="category_asc" {% if current_sorting=='category_asc' %}selected{% endif %}>
                                 Category (A-Z)
                             </option>
-                            <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>
+                            <option value="category_desc" {% if current_sorting=='category_desc' %}selected{% endif %}>
                                 Category (Z-A)
                             </option>
                         </select>
@@ -62,7 +64,7 @@
             <!-- Display products -->
             <div class="row">
                 {% for product in products %}
-                {% include 'includes/product_card.html' with prefix='products' %}
+                    {% include 'includes/product_card.html' with prefix='products' %}
                 {% endfor %}
             </div>
         </div>
@@ -71,43 +73,43 @@
 <div class="btt-button shadow-sm rounded-3 border-blue feedback">
     <a class="btt-link d-flex h-100">
         <i class="fas fa-arrow-up text-yellow mx-auto my-auto"></i>
-    </a>	
-  </div>
+    </a>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
-    <!-- From boutique_ado walkthrough -->
-    <script>
-         /* global $ */
-		$('.btt-link').click(function(e) {
-			window.scrollTo(0,0);
-		});
-	</script>
-    <!-- From boutique_ado walkthrough -->
-    <script>
-         /* global $ */
-        $('#sort-selector').change(function() {
-            var selector = $(this);
-            var currentUrl = new URL(window.location);
+{{ block.super }}
+<!-- From boutique_ado walkthrough -->
+<script>
+    /* global $ */
+    $('.btt-link').click(function (e) {
+        window.scrollTo(0, 0);
+    });
+</script>
+<!-- From boutique_ado walkthrough -->
+<script>
+    /* global $ */
+    $('#sort-selector').change(function () {
+        var selector = $(this);
+        var currentUrl = new URL(window.location);
 
-            var selectedVal = selector.val();
-            if(selectedVal != "reset"){
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1];
+        var selectedVal = selector.val();
+        if (selectedVal != "reset") {
+            var sort = selectedVal.split("_")[0];
+            var direction = selectedVal.split("_")[1];
 
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
+            currentUrl.searchParams.set("sort", sort);
+            currentUrl.searchParams.set("direction", direction);
 
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort");
-                currentUrl.searchParams.delete("direction");
+            window.location.replace(currentUrl);
+        } else {
+            currentUrl.searchParams.delete("sort");
+            currentUrl.searchParams.delete("direction");
 
-                window.location.replace(currentUrl);
-            }
-        });
-    </script>
-    <!-- Disable all buttons when one is used -->
-    <script src="{% static 'products/js/product_card_btns.js' %}"></script>  
+            window.location.replace(currentUrl);
+        }
+    });
+</script>
+<!-- Disable all buttons when one is used -->
+<script src="{% static 'products/js/product_card_btns.js' %}"></script>
 {% endblock %}
