--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -11,9 +11,12 @@
                 All Products
             </a>
             <ul class=" dropdown-menu rounded-4 px-2 py-2" aria-label="all-products-dropdown">
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?sort=price&direction=asc" class="dropdown-item">By Price</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?sort=rating&direction=desc" class="dropdown-item">By Rating</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?sort=category&direction=asc" class="dropdown-item">By Category</a>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?sort=price&direction=asc"
+                        class="dropdown-item">By Price</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?sort=rating&direction=desc"
+                        class="dropdown-item">By Rating</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?sort=category&direction=asc"
+                        class="dropdown-item">By Category</a>
                 </li>
                 <li class="custom-dropdown"> <a href="{% url 'products' %}" class="dropdown-item">All Products</a> </li>
             </ul>
@@ -24,16 +27,23 @@
                 Pokémon Cards
             </a>
             <ul class=" dropdown-menu rounded-4 px-2 py-2" aria-label="pokemon-cards-dropdown">
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=booster_packs" class="dropdown-item">Booster Packs</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=booster_bundles" class="dropdown-item">Booster Bundle</a>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=booster_packs"
+                        class="dropdown-item">Booster Packs</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=booster_bundles"
+                        class="dropdown-item">Booster Bundle</a>
                 </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=booster_boxes" class="dropdown-item">Booster Boxes</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=boxed_sets" class="dropdown-item">Boxed Sets</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=elite_trainer_boxes" class="dropdown-item">Elite Trainer
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=booster_boxes"
+                        class="dropdown-item">Booster Boxes</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=boxed_sets"
+                        class="dropdown-item">Boxed Sets</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=elite_trainer_boxes"
+                        class="dropdown-item">Elite Trainer
                         Boxes</a>
                 </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=tins" class="dropdown-item">Tins</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=booster_packs,booster_bundles,booster_boxes,boxed_sets,elite_trainer_boxes,tins"
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=tins" class="dropdown-item">Tins</a>
+                </li>
+                <li class="custom-dropdown"> <a
+                        href="{% url 'products'%}?category=booster_packs,booster_bundles,booster_boxes,boxed_sets,elite_trainer_boxes,tins"
                         class="dropdown-item">All Cards</a> </li>
             </ul>
         </li>
@@ -43,10 +53,14 @@
                 Accessories
             </a>
             <ul class=" dropdown-menu rounded-4 px-2 py-2" aria-label="accessories-dropdown">
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=binders" class="dropdown-item">Binders</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=sleeves" class="dropdown-item">Sleeves</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=toploaders" class="dropdown-item">Toploaders</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=binders,sleeves,toploaders" class="dropdown-item">All
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=binders"
+                        class="dropdown-item">Binders</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=sleeves"
+                        class="dropdown-item">Sleeves</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=toploaders"
+                        class="dropdown-item">Toploaders</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=binders,sleeves,toploaders"
+                        class="dropdown-item">All
                         Accessories</a> </li>
             </ul>
         </li>
@@ -56,10 +70,14 @@
                 Toys &amp; Collectables
             </a>
             <ul class=" dropdown-menu rounded-4 px-2 py-2" aria-label="collectables-dropdown">
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=figures" class="dropdown-item">Figures</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=pins" class="dropdown-item">Pins</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=plushes" class="dropdown-item">Plushes</a> </li>
-                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=figures,pins,plushes" class="dropdown-item">All Toys &amp;
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=figures"
+                        class="dropdown-item">Figures</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=pins" class="dropdown-item">Pins</a>
+                </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=plushes"
+                        class="dropdown-item">Plushes</a> </li>
+                <li class="custom-dropdown"> <a href="{% url 'products'%}?category=figures,pins,plushes"
+                        class="dropdown-item">All Toys &amp;
                         Collectables
                     </a> </li>
             </ul>
