--- a/templates/includes/top_nav_mobile.html
+++ b/templates/includes/top_nav_mobile.html
@@ -65,7 +65,7 @@
         <div class="dropdown-menu border-0 w-100 pe-3" aria-labelledby="search-icon">
             <form method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
-                    <label for="mobile-search" class="d-none">Search</label>
+                    <label for="mobile-search" class="sr-only">Search</label>
                     <input class="form-control rounded-0 border-black search-input-mobile" type="text" name="q"
                         placeholder="Search our products" id="mobile-search">
                     <div class="input-group-append">
