--- a/products/templates/add_product.html
+++ b/products/templates/add_product.html
@@ -24,7 +24,7 @@
                         {{ field }}
                     {% endif %}
                 {% endfor %}
-                <label for="id_image" class="d-none">Select image</label>
+                <label for="id_image" class="sr-only">Select image</label>
                 <div class="text-end mt-3">
                     <a class="btn btn-primary" href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-warning" type="submit">Add Product</button>
