--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -152,7 +152,7 @@
                             <p class="mt-3"><strong class="me-2">Quantity</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
-                                    <label for="qty-input" class="d-none">Update quantity</label>
+                                    <label for="qty-input" class="sr-only">Update quantity</label>
                                     <input class="form-control" type="number" name="quantity" value="1" min="1" max="99"
                                         id="qty-input">
                                 </div>
