--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -73,6 +73,7 @@
 <div class="btt-button shadow-sm rounded-3 border-blue feedback">
     <a href="#" class="btt-link d-flex h-100">
         <i class="fas fa-arrow-up text-yellow mx-auto my-auto"></i>
+        <span class="sr-only">Back to top</span>
     </a>
 </div>
 {% endblock %}
