--- a/templates/base.html
+++ b/templates/base.html
@@ -67,11 +67,11 @@
             <div class=" col-12 col-lg-4 text-center my-auto">
                 <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
-                        <label for="search-bar" class="d-none">Search bar:</label>
+                        <label for="search-bar" class="sr-only">Search bar:</label>
                         <input class="form-control rounded-0 search-input" type="text" name="q"
                             placeholder="Search our products" id="search-bar">
                         <div class="input-group-append">
-                            <label for="search-btn" class="d-none">Search button:</label>
+                            <label for="search-btn" class="sr-only">Search button:</label>
                             <button class="form-control btn-yellow border-yellow rounded-0 search-button" type="submit"
                                 aria-label="Search" id="search-btn">
                                 <span class="icon">
@@ -237,7 +237,7 @@
                                 <div id="mc_embed_signup_scroll">
                                     <p class="text-center mt-0">Keep up to date with all our latest product releases and
                                         deals!</p>
-                                    <label for="mce-EMAIL" class="d-none">Email Address:</label>
+                                    <label for="mce-EMAIL" class="sr-only">Email Address:</label>
                                     <div class="mc-field-group w-75 mx-auto">
                                         <input type="email" name="EMAIL" class="required email" id="mce-EMAIL"
                                             required="" value="" placeholder="Enter Email Address">
@@ -252,7 +252,7 @@
                                         /* real people should not fill this in and expect good things - do not remove
                                         this or risk form bot
                                         signups */
-                                        <label for="mailchimp-hidden" class="d-none">Hidden mailchimp input</label>
+                                        <label for="mailchimp-hidden" class="sr-only">Hidden mailchimp input</label>
                                         <input type="text" name="b_e162ff834ad07ab095bb85581_f908fecc84" tabindex="-1"
                                             value="" id="mailchimp-hidden">
                                     </div>
